# unirec

./: README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: resources_usage.md
tests/: __init__.py  test_candidate_merger.py  test_config.py  test_context.py  test_encodable.py  test_fingerprint.py  test_interfaces.py  test_loadable.py  test_metrics.py  test_registry.py  test_resources.py  test_state.py  test_version.py
unirec/configs/: exp_dual_ucb.yaml
unirec/core/: config.py  fingerprint.py  interfaces.py  item_resources.py  registry.py  resources.py  runner.py  state.py  version.py
unirec/data/: item_emb.npy
unirec/data/context/: __init__.py  item_context.py  request_context.py  user_context.py
unirec/data/encodable/: __init__.py  item_encodable.py  user_encodable.py
unirec/data/encoded/: __init__.py  item_encoded.py  user_encoded.py
unirec/models/: layers.py
unirec/models/encoders/: __init__.py  item_encoder.py  user_encoder.py
unirec/plugins/: common.py
unirec/plugins/candidate_merger/: union.py
unirec/plugins/candidate_retriever/: simple_twotower_ann.py  twotower_retriever_faiss.py  twotower_retriever_simple.py
unirec/plugins/candidate_shaper/: mmr.py
unirec/plugins/eval/: evaluator.py  metrics.py  ope.py
unirec/plugins/merge/: union.py
unirec/plugins/rankers/: bandit_ucb.py
unirec/plugins/rerank/: mmr.py
unirec/plugins/retrieval/: dualtower.py  simple_twotower_ann.py  toy_dualtower.py
unirec/plugins/slate_policy/: bandit_ucb.py
unirec/scripts/: build_ann.py  offline_eval.py  serve.py
