[project]
name = "unirec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "types-pyyaml>=6.0.12.20250915",
]
